# src/routes/menu-route.js
@@ -5,6 +5,6 @@ const MenuController = require('../controllers/menu-controller');
 
 router.get('/list', MenuController.findAllMenus);
 router.get('/:menuCode', MenuController.findMenuByMenuCode);
-router.post('/', MenuController.registNewMenu)
+router.post('/', MenuController.registNewMenu);
 
 module.exports = router;
